--- a/index3.html
+++ b/index3.html
@@ -19,7 +19,7 @@
           <div class="topnav-right">
                   <div class="menu">
                           <a href="index.html">Home</a>
-                          <a href="index3.html">About us</a>
+                          <a href="index2.html">About us</a>
 
                           <a href="index2.html">menu</a>
                   </div>
@@ -31,17 +31,16 @@
 
       </div>
     </div>
-    
+   
+      </div>  
   </div>
   <script src="js/jquery-3.4.1.js"></script>
   <script src="js/script.js"></script>
 </body>
-<div class="footer">   
-   
-  <img src="images/facebook.png"> 
-  <img src="images/g_plus.png">  
-  <img src="images/skype.png">  
-  <img src="images/stumble_upon.png">  
-  </div>    
-  
+ <div class="footer">
+       <img src="images/dribble.png">  
+      <img src="images/facebook.png"> 
+      <img src="images/g_plus.png">  
+      
+      </div>    
 </html>
