i add navigation bar and styles

--- a/index.html
+++ b/index.html
@@ -32,16 +32,22 @@
       </div>
     </div>
     
-  </div>
+  
   <script src="js/jquery-3.4.1.js"></script>
   <script src="js/script.js"></script>
 </body>
-<div class="footer">   
-   
+<footer>
+      
+    <p>contact us on:</p>  
   <img src="images/facebook.png"> 
-  <img src="images/g_plus.png">  
-  <img src="images/skype.png">  
-  <img src="images/stumble_upon.png">  
-  </div>    
+  <P>phone number:+250783853580</P>
+  <p>copy right @charlene (2019)</p>
+
+  
+  
+</footer>  
+
+</div>
+ 
   
 </html>
