--- a/index2.html
+++ b/index2.html
@@ -103,7 +103,7 @@
     <p>contact us on:</p>  
   <img src="images/facebook.png"> 
   <P>phone number:+250783853580</P>
-  
+  <p>copy right @charlene (2019)</p>
 
   
   
