--- a/index3.html
+++ b/index3.html
@@ -19,9 +19,9 @@
           <div class="topnav-right">
                   <div class="menu">
                           <a href="index.html">Home</a>
-                          <a href="index2.html">About us</a>
-
                           <a href="index2.html">menu</a>
+
+                          <a href="index2.html">about us</a>
                   </div>
           </div>
   </div>
@@ -37,10 +37,15 @@
   <script src="js/jquery-3.4.1.js"></script>
   <script src="js/script.js"></script>
 </body>
- <div class="footer">
-       <img src="images/dribble.png">  
-      <img src="images/facebook.png"> 
-      <img src="images/g_plus.png">  
+<footer>
       
-      </div>    
+    <p>contact us on:</p>  
+  <img src="images/facebook.png"> 
+  <P>phone number:+250783853580</P>
+  <p>copy right @charlene (2019)</p>
+
+  
+  
+</footer>  
+</div>    
 </html>
