i make in index.html

--- a/index.html
+++ b/index.html
@@ -78,13 +78,9 @@
 
               </div>
             </div>
-
-
-
-          </div>
+           </div>
         </div>
-
-        <div class="col-md-4">
+       <div class="col-md-4">
           <div class="aboutus">
 
             <h2>~~about us~~</h2>
@@ -96,31 +92,27 @@
               you are becouse we delive for you in affordable price!!!
             </p>
           </div>
-
-
         </div>
         <div class="col-md-4">
           <div class="aboutmenu">
-            <h2>~~about  menu~~</h2>
+            <h2>~~about menu~~</h2>
             <p> in our pizza madness <br>
               we have good menu small pizza<br>
               medium pizza,and large pizza .<br>
               all those pizza they contain topings and crust<br>
-              so as customer you are able to select <br>all kind of topings and crust you need.
+              so as customer you are able to select <br>all kind of topings and crust you need to be contained to your pizza.
             </p>
           </div>
         </div>
 
       </div>
     </div>
-
   </div>
   <script src="js/jquery-3.4.1.js"></script>
   <script src="js/script.js"></script>
 </body>
 <footer>
   <p>contact us on:</p>
-
   <P>phone number:+250783853580</P>
   <p>copy right @charlene (2019)</p>
 </footer>
